Fix dialog text and textAlign

--- a/client/app/global.css
+++ b/client/app/global.css
@@ -3,7 +3,6 @@ body {
   margin: 0;
   border: 0;
   min-height: 100vh;
-  text-align: justify;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   display: flex;
